# gym-dashboard

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/components/: AppSplash.tsx  Layout.tsx  NotificationsPopover.tsx  ProtectedRoute.tsx  RenewSubscriptionDialog.tsx  StudentCard.tsx  StudentForm.tsx
src/components/ui/: chart.tsx  dialog.tsx  resizable.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useStudents.ts
src/lib/: auth-repository.ts  date-utils.ts  platform.ts  student-repository.ts
src/pages/: About.tsx  Dashboard.tsx  Login.tsx  Schedule.tsx  Settings.tsx  Students.tsx
src/styles/: theme.css
src/types/: student.ts
