[package]
name = "gym_dashboard"
version = "1.0.0"
description = "RFGym Control desktop app built with Tauri"
authors = ["rfgym"]
edition = "2021"

[lib]
name = "gym_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
